@@ -27,7 +27,7 @@ namespace GAPPSF.GlobalcachingEU
                     using (System.IO.TemporaryFile tmp = new System.IO.TemporaryFile(true))
                     using (System.Net.WebClient wc = new System.Net.WebClient())
                     {
-                        wc.DownloadFile("http://www.globalcaching.eu/service/cachedistance.aspx?country=Netherlands&prefix=GC", tmp.Path);
+                        wc.DownloadFile(string.Format("http://www.globalcaching.eu/service/cachedistance.aspx?country=Netherlands&prefix=GC&token{0}", System.Web.HttpUtility.UrlEncode(Core.Settings.Default.LiveAPIToken ?? "")), tmp.Path);
 
                         using (var fs = System.IO.File.OpenRead(tmp.Path))
                         using (ZipInputStream s = new ZipInputStream(fs))
@@ -159,7 +159,7 @@ namespace GAPPSF.GlobalcachingEU
         {
             using (System.Net.WebClient wc = new System.Net.WebClient())
             {
-                string doc = wc.DownloadString(string.Format("http://www.globalcaching.eu/Service/GeocacheCodes.aspx?country={0}", country));
+                string doc = wc.DownloadString(string.Format("http://www.globalcaching.eu/Service/GeocacheCodes.aspx?country={0}&token={1}", country, System.Web.HttpUtility.UrlEncode(Core.Settings.Default.LiveAPIToken ?? "")));
                 if (doc != null)
                 {
                     string[] lines = doc.Replace("\r", "").Split(new char[] { '\n' });
