@@ -34,15 +34,17 @@
             this.groupBox1 = new System.Windows.Forms.GroupBox();
             this.checkBox5 = new System.Windows.Forms.CheckBox();
             this.checkBox4 = new System.Windows.Forms.CheckBox();
+            this.label1 = new System.Windows.Forms.Label();
             this.groupBox1.SuspendLayout();
             this.SuspendLayout();
             // 
             // checkBox1
             // 
             this.checkBox1.AutoSize = true;
-            this.checkBox1.Location = new System.Drawing.Point(15, 14);
+            this.checkBox1.Location = new System.Drawing.Point(11, 11);
+            this.checkBox1.Margin = new System.Windows.Forms.Padding(2, 2, 2, 2);
             this.checkBox1.Name = "checkBox1";
-            this.checkBox1.Size = new System.Drawing.Size(236, 21);
+            this.checkBox1.Size = new System.Drawing.Size(179, 17);
             this.checkBox1.TabIndex = 0;
             this.checkBox1.Text = "Show settings dialog before start";
             this.checkBox1.UseVisualStyleBackColor = true;
@@ -50,9 +52,10 @@
             // checkBox2
             // 
             this.checkBox2.AutoSize = true;
-            this.checkBox2.Location = new System.Drawing.Point(15, 41);
+            this.checkBox2.Location = new System.Drawing.Point(11, 33);
+            this.checkBox2.Margin = new System.Windows.Forms.Padding(2, 2, 2, 2);
             this.checkBox2.Name = "checkBox2";
-            this.checkBox2.Size = new System.Drawing.Size(336, 21);
+            this.checkBox2.Size = new System.Drawing.Size(257, 17);
             this.checkBox2.TabIndex = 1;
             this.checkBox2.Text = "Automatic download new geocaches (no prompt)";
             this.checkBox2.UseVisualStyleBackColor = true;
@@ -60,9 +63,10 @@
             // checkBox3
             // 
             this.checkBox3.AutoSize = true;
-            this.checkBox3.Location = new System.Drawing.Point(19, 30);
+            this.checkBox3.Location = new System.Drawing.Point(14, 24);
+            this.checkBox3.Margin = new System.Windows.Forms.Padding(2, 2, 2, 2);
             this.checkBox3.Name = "checkBox3";
-            this.checkBox3.Size = new System.Drawing.Size(107, 21);
+            this.checkBox3.Size = new System.Drawing.Size(83, 17);
             this.checkBox3.TabIndex = 2;
             this.checkBox3.Text = "Netherlands";
             this.checkBox3.UseVisualStyleBackColor = true;
@@ -72,9 +76,11 @@
             this.groupBox1.Controls.Add(this.checkBox5);
             this.groupBox1.Controls.Add(this.checkBox4);
             this.groupBox1.Controls.Add(this.checkBox3);
-            this.groupBox1.Location = new System.Drawing.Point(15, 80);
+            this.groupBox1.Location = new System.Drawing.Point(11, 65);
+            this.groupBox1.Margin = new System.Windows.Forms.Padding(2, 2, 2, 2);
             this.groupBox1.Name = "groupBox1";
-            this.groupBox1.Size = new System.Drawing.Size(424, 137);
+            this.groupBox1.Padding = new System.Windows.Forms.Padding(2, 2, 2, 2);
+            this.groupBox1.Size = new System.Drawing.Size(318, 111);
             this.groupBox1.TabIndex = 3;
             this.groupBox1.TabStop = false;
             this.groupBox1.Text = "Update and download caches for";
@@ -82,9 +88,10 @@
             // checkBox5
             // 
             this.checkBox5.AutoSize = true;
-            this.checkBox5.Location = new System.Drawing.Point(19, 84);
+            this.checkBox5.Location = new System.Drawing.Point(14, 68);
+            this.checkBox5.Margin = new System.Windows.Forms.Padding(2, 2, 2, 2);
             this.checkBox5.Name = "checkBox5";
-            this.checkBox5.Size = new System.Drawing.Size(108, 21);
+            this.checkBox5.Size = new System.Drawing.Size(84, 17);
             this.checkBox5.TabIndex = 4;
             this.checkBox5.Text = "Luxembourg";
             this.checkBox5.UseVisualStyleBackColor = true;
@@ -92,22 +99,34 @@
             // checkBox4
             // 
             this.checkBox4.AutoSize = true;
-            this.checkBox4.Location = new System.Drawing.Point(19, 57);
+            this.checkBox4.Location = new System.Drawing.Point(14, 46);
+            this.checkBox4.Margin = new System.Windows.Forms.Padding(2, 2, 2, 2);
             this.checkBox4.Name = "checkBox4";
-            this.checkBox4.Size = new System.Drawing.Size(80, 21);
+            this.checkBox4.Size = new System.Drawing.Size(63, 17);
             this.checkBox4.TabIndex = 3;
             this.checkBox4.Text = "Belgium";
             this.checkBox4.UseVisualStyleBackColor = true;
             // 
+            // label1
+            // 
+            this.label1.Location = new System.Drawing.Point(11, 182);
+            this.label1.Name = "label1";
+            this.label1.Size = new System.Drawing.Size(318, 65);
+            this.label1.TabIndex = 4;
+            this.label1.Text = "LET OP: Voor deze functionaliteit moet je donateur zijn van globalcaching.eu en L" +
+    "ive API autorisatie actief hebben op globalcaching.eu.";
+            // 
             // SettingsPanel
             // 
-            this.AutoScaleDimensions = new System.Drawing.SizeF(8F, 16F);
+            this.AutoScaleDimensions = new System.Drawing.SizeF(6F, 13F);
             this.AutoScaleMode = System.Windows.Forms.AutoScaleMode.Font;
+            this.Controls.Add(this.label1);
             this.Controls.Add(this.groupBox1);
             this.Controls.Add(this.checkBox2);
             this.Controls.Add(this.checkBox1);
+            this.Margin = new System.Windows.Forms.Padding(2, 2, 2, 2);
             this.Name = "SettingsPanel";
-            this.Size = new System.Drawing.Size(443, 225);
+            this.Size = new System.Drawing.Size(332, 264);
             this.groupBox1.ResumeLayout(false);
             this.groupBox1.PerformLayout();
             this.ResumeLayout(false);
@@ -123,5 +142,6 @@
         private System.Windows.Forms.GroupBox groupBox1;
         private System.Windows.Forms.CheckBox checkBox5;
         private System.Windows.Forms.CheckBox checkBox4;
+        private System.Windows.Forms.Label label1;
     }
 }
